from parch.books import YearPlanner
from parch.calendar import month_days
from parch.components import (
    AnnualGrid,
    AnnualMonth,
    CoverTitle,
    FavoritesPage,
    HabitGrid,
    MeetingAgenda,
    MeetingIndex,
    MeetingSlot,
    MonthGrid,
    My100Page,
    Notes,
    Priorities,
    ProjectsBoard,
    ProjectsIndex,
    ProjectTicket,
    QuarterGrid,
    ReviewDay,
    ReviewIndex,
    ReviewMonthBand,
    ReviewWeek,
    ReviewWeekPage,
    Schedule,
    TasksIndex,
    TasksMonthBand,
    TasksWeekPage,
    TaskWeek,
    WeekStrip,
)
from parch.plotter import RecordingPlotter
from parch.spec import Spec


def test_components_do_not_draw():
    for cls in (
        AnnualGrid,
        AnnualMonth,
        CoverTitle,
        FavoritesPage,
        HabitGrid,
        MeetingAgenda,
        MeetingIndex,
        MeetingSlot,
        MonthGrid,
        My100Page,
        Notes,
        Priorities,
        ProjectTicket,
        ProjectsBoard,
        ProjectsIndex,
        QuarterGrid,
        ReviewDay,
        ReviewIndex,
        ReviewMonthBand,
        ReviewWeek,
        ReviewWeekPage,
        Schedule,
        TaskWeek,
        TasksIndex,
        TasksMonthBand,
        TasksWeekPage,
        WeekStrip,
    ):
        assert "draw" not in cls.__dict__


def test_book_records_year_dests_and_links(snapshot):
    spec = Spec(notes_pages=1)
    plotter = RecordingPlotter()
    YearPlanner().plot(spec, plotter)

    dests = plotter.dests()
    assert dests == snapshot
    assert dests.count("week-2026-W05") == 1
    assert dests.count("week-2026-W09") == 1
    assert dests.count("week-2026-W53") == 1

    links = plotter.links()
    assert "year-2026" in links
    assert "month-2026-01" in links
    assert "month-2026-02" in links
    assert "month-2026-03" in links
    assert "month-2026-07-habits" in links
    assert "projects-index-2026-01" in dests
    assert "projects-index-2026-01" in links
    assert "projects-2026-01" in dests
    assert "projects-2026-01" in links
    assert "projects-2026-08" in dests
    assert "projects-2026-08" in links
    assert "meetings-index-2026" in dests
    assert "meetings-index-2026" in links
    assert "meeting-2026-01" in dests
    assert "meeting-2026-01" in links
    assert "meeting-2026-16" in dests
    assert "meeting-2026-16" in links
    assert "tasks-index-2026-Q1" in dests
    assert "tasks-index-2026-Q1" in links
    assert "tasks-2026-W01" in dests
    assert "tasks-2026-W01" in links
    assert "review-index-2026" in dests
    assert "review-index-2026" in links
    assert "review-2026-W01" in dests
    assert "review-2026-W01" in links
    assert "month-2026-01-habits" in dests
    assert "week-2026-W01" in links
    assert "week-2026-W14" in links
    for month in spec.months:
        for day in month_days(2026, month):
            assert day.isoformat() in links
    assert "2026-02-15-notes-1" in links

    texts = [op[2] for op in plotter.ops if op[0] == "text"]
    assert "Schedule" in texts
    assert "Notes" in texts
    assert "Notes 1/1" in texts
    assert "Year Book" in texts
    assert "Week 01" in texts
    assert "February 2026" in texts
    assert "toolbar 8 mm - not a well" not in texts


def test_notes_pages_zero_skips_wells(snapshot):
    plotter = RecordingPlotter()
    YearPlanner().plot(Spec(notes_pages=0), plotter)
    dests = plotter.dests()
    assert dests == snapshot
    assert not any("-notes-" in name for name in dests)
    assert "2026-01-05-notes-1" not in plotter.links()
