# serializer version: 1
# name: test_book_records_year_dests_and_links
  list([
    'cover',
    'year-2026',
    'quarter-2026-Q1',
    'quarter-2026-Q2',
    'quarter-2026-Q3',
    'quarter-2026-Q4',
    'month-2026-01',
    'month-2026-01-habits',
    'month-2026-02',
    'month-2026-02-habits',
    'month-2026-03',
    'month-2026-03-habits',
    'month-2026-04',
    'month-2026-04-habits',
    'month-2026-05',
    'month-2026-05-habits',
    'month-2026-06',
    'month-2026-06-habits',
    'month-2026-07',
    'month-2026-07-habits',
    'month-2026-08',
    'month-2026-08-habits',
    'month-2026-09',
    'month-2026-09-habits',
    'month-2026-10',
    'month-2026-10-habits',
    'month-2026-11',
    'month-2026-11-habits',
    'month-2026-12',
    'month-2026-12-habits',
    'week-2026-W01',
    '2026-01-01',
    '2026-01-01-notes-1',
    '2026-01-02',
    '2026-01-02-notes-1',
    '2026-01-03',
    '2026-01-03-notes-1',
    '2026-01-04',
    '2026-01-04-notes-1',
    'week-2026-W02',
    '2026-01-05',
    '2026-01-05-notes-1',
    '2026-01-06',
    '2026-01-06-notes-1',
    '2026-01-07',
    '2026-01-07-notes-1',
    '2026-01-08',
    '2026-01-08-notes-1',
    '2026-01-09',
    '2026-01-09-notes-1',
    '2026-01-10',
    '2026-01-10-notes-1',
    '2026-01-11',
    '2026-01-11-notes-1',
    'week-2026-W03',
    '2026-01-12',
    '2026-01-12-notes-1',
    '2026-01-13',
    '2026-01-13-notes-1',
    '2026-01-14',
    '2026-01-14-notes-1',
    '2026-01-15',
    '2026-01-15-notes-1',
    '2026-01-16',
    '2026-01-16-notes-1',
    '2026-01-17',
    '2026-01-17-notes-1',
    '2026-01-18',
    '2026-01-18-notes-1',
    'week-2026-W04',
    '2026-01-19',
    '2026-01-19-notes-1',
    '2026-01-20',
    '2026-01-20-notes-1',
    '2026-01-21',
    '2026-01-21-notes-1',
    '2026-01-22',
    '2026-01-22-notes-1',
    '2026-01-23',
    '2026-01-23-notes-1',
    '2026-01-24',
    '2026-01-24-notes-1',
    '2026-01-25',
    '2026-01-25-notes-1',
    'week-2026-W05',
    '2026-01-26',
    '2026-01-26-notes-1',
    '2026-01-27',
    '2026-01-27-notes-1',
    '2026-01-28',
    '2026-01-28-notes-1',
    '2026-01-29',
    '2026-01-29-notes-1',
    '2026-01-30',
    '2026-01-30-notes-1',
    '2026-01-31',
    '2026-01-31-notes-1',
    '2026-02-01',
    '2026-02-01-notes-1',
    'week-2026-W06',
    '2026-02-02',
    '2026-02-02-notes-1',
    '2026-02-03',
    '2026-02-03-notes-1',
    '2026-02-04',
    '2026-02-04-notes-1',
    '2026-02-05',
    '2026-02-05-notes-1',
    '2026-02-06',
    '2026-02-06-notes-1',
    '2026-02-07',
    '2026-02-07-notes-1',
    '2026-02-08',
    '2026-02-08-notes-1',
    'week-2026-W07',
    '2026-02-09',
    '2026-02-09-notes-1',
    '2026-02-10',
    '2026-02-10-notes-1',
    '2026-02-11',
    '2026-02-11-notes-1',
    '2026-02-12',
    '2026-02-12-notes-1',
    '2026-02-13',
    '2026-02-13-notes-1',
    '2026-02-14',
    '2026-02-14-notes-1',
    '2026-02-15',
    '2026-02-15-notes-1',
    'week-2026-W08',
    '2026-02-16',
    '2026-02-16-notes-1',
    '2026-02-17',
    '2026-02-17-notes-1',
    '2026-02-18',
    '2026-02-18-notes-1',
    '2026-02-19',
    '2026-02-19-notes-1',
    '2026-02-20',
    '2026-02-20-notes-1',
    '2026-02-21',
    '2026-02-21-notes-1',
    '2026-02-22',
    '2026-02-22-notes-1',
    'week-2026-W09',
    '2026-02-23',
    '2026-02-23-notes-1',
    '2026-02-24',
    '2026-02-24-notes-1',
    '2026-02-25',
    '2026-02-25-notes-1',
    '2026-02-26',
    '2026-02-26-notes-1',
    '2026-02-27',
    '2026-02-27-notes-1',
    '2026-02-28',
    '2026-02-28-notes-1',
    '2026-03-01',
    '2026-03-01-notes-1',
    'week-2026-W10',
    '2026-03-02',
    '2026-03-02-notes-1',
    '2026-03-03',
    '2026-03-03-notes-1',
    '2026-03-04',
    '2026-03-04-notes-1',
    '2026-03-05',
    '2026-03-05-notes-1',
    '2026-03-06',
    '2026-03-06-notes-1',
    '2026-03-07',
    '2026-03-07-notes-1',
    '2026-03-08',
    '2026-03-08-notes-1',
    'week-2026-W11',
    '2026-03-09',
    '2026-03-09-notes-1',
    '2026-03-10',
    '2026-03-10-notes-1',
    '2026-03-11',
    '2026-03-11-notes-1',
    '2026-03-12',
    '2026-03-12-notes-1',
    '2026-03-13',
    '2026-03-13-notes-1',
    '2026-03-14',
    '2026-03-14-notes-1',
    '2026-03-15',
    '2026-03-15-notes-1',
    'week-2026-W12',
    '2026-03-16',
    '2026-03-16-notes-1',
    '2026-03-17',
    '2026-03-17-notes-1',
    '2026-03-18',
    '2026-03-18-notes-1',
    '2026-03-19',
    '2026-03-19-notes-1',
    '2026-03-20',
    '2026-03-20-notes-1',
    '2026-03-21',
    '2026-03-21-notes-1',
    '2026-03-22',
    '2026-03-22-notes-1',
    'week-2026-W13',
    '2026-03-23',
    '2026-03-23-notes-1',
    '2026-03-24',
    '2026-03-24-notes-1',
    '2026-03-25',
    '2026-03-25-notes-1',
    '2026-03-26',
    '2026-03-26-notes-1',
    '2026-03-27',
    '2026-03-27-notes-1',
    '2026-03-28',
    '2026-03-28-notes-1',
    '2026-03-29',
    '2026-03-29-notes-1',
    'week-2026-W14',
    '2026-03-30',
    '2026-03-30-notes-1',
    '2026-03-31',
    '2026-03-31-notes-1',
    '2026-04-01',
    '2026-04-01-notes-1',
    '2026-04-02',
    '2026-04-02-notes-1',
    '2026-04-03',
    '2026-04-03-notes-1',
    '2026-04-04',
    '2026-04-04-notes-1',
    '2026-04-05',
    '2026-04-05-notes-1',
    'week-2026-W15',
    '2026-04-06',
    '2026-04-06-notes-1',
    '2026-04-07',
    '2026-04-07-notes-1',
    '2026-04-08',
    '2026-04-08-notes-1',
    '2026-04-09',
    '2026-04-09-notes-1',
    '2026-04-10',
    '2026-04-10-notes-1',
    '2026-04-11',
    '2026-04-11-notes-1',
    '2026-04-12',
    '2026-04-12-notes-1',
    'week-2026-W16',
    '2026-04-13',
    '2026-04-13-notes-1',
    '2026-04-14',
    '2026-04-14-notes-1',
    '2026-04-15',
    '2026-04-15-notes-1',
    '2026-04-16',
    '2026-04-16-notes-1',
    '2026-04-17',
    '2026-04-17-notes-1',
    '2026-04-18',
    '2026-04-18-notes-1',
    '2026-04-19',
    '2026-04-19-notes-1',
    'week-2026-W17',
    '2026-04-20',
    '2026-04-20-notes-1',
    '2026-04-21',
    '2026-04-21-notes-1',
    '2026-04-22',
    '2026-04-22-notes-1',
    '2026-04-23',
    '2026-04-23-notes-1',
    '2026-04-24',
    '2026-04-24-notes-1',
    '2026-04-25',
    '2026-04-25-notes-1',
    '2026-04-26',
    '2026-04-26-notes-1',
    'week-2026-W18',
    '2026-04-27',
    '2026-04-27-notes-1',
    '2026-04-28',
    '2026-04-28-notes-1',
    '2026-04-29',
    '2026-04-29-notes-1',
    '2026-04-30',
    '2026-04-30-notes-1',
    '2026-05-01',
    '2026-05-01-notes-1',
    '2026-05-02',
    '2026-05-02-notes-1',
    '2026-05-03',
    '2026-05-03-notes-1',
    'week-2026-W19',
    '2026-05-04',
    '2026-05-04-notes-1',
    '2026-05-05',
    '2026-05-05-notes-1',
    '2026-05-06',
    '2026-05-06-notes-1',
    '2026-05-07',
    '2026-05-07-notes-1',
    '2026-05-08',
    '2026-05-08-notes-1',
    '2026-05-09',
    '2026-05-09-notes-1',
    '2026-05-10',
    '2026-05-10-notes-1',
    'week-2026-W20',
    '2026-05-11',
    '2026-05-11-notes-1',
    '2026-05-12',
    '2026-05-12-notes-1',
    '2026-05-13',
    '2026-05-13-notes-1',
    '2026-05-14',
    '2026-05-14-notes-1',
    '2026-05-15',
    '2026-05-15-notes-1',
    '2026-05-16',
    '2026-05-16-notes-1',
    '2026-05-17',
    '2026-05-17-notes-1',
    'week-2026-W21',
    '2026-05-18',
    '2026-05-18-notes-1',
    '2026-05-19',
    '2026-05-19-notes-1',
    '2026-05-20',
    '2026-05-20-notes-1',
    '2026-05-21',
    '2026-05-21-notes-1',
    '2026-05-22',
    '2026-05-22-notes-1',
    '2026-05-23',
    '2026-05-23-notes-1',
    '2026-05-24',
    '2026-05-24-notes-1',
    'week-2026-W22',
    '2026-05-25',
    '2026-05-25-notes-1',
    '2026-05-26',
    '2026-05-26-notes-1',
    '2026-05-27',
    '2026-05-27-notes-1',
    '2026-05-28',
    '2026-05-28-notes-1',
    '2026-05-29',
    '2026-05-29-notes-1',
    '2026-05-30',
    '2026-05-30-notes-1',
    '2026-05-31',
    '2026-05-31-notes-1',
    'week-2026-W23',
    '2026-06-01',
    '2026-06-01-notes-1',
    '2026-06-02',
    '2026-06-02-notes-1',
    '2026-06-03',
    '2026-06-03-notes-1',
    '2026-06-04',
    '2026-06-04-notes-1',
    '2026-06-05',
    '2026-06-05-notes-1',
    '2026-06-06',
    '2026-06-06-notes-1',
    '2026-06-07',
    '2026-06-07-notes-1',
    'week-2026-W24',
    '2026-06-08',
    '2026-06-08-notes-1',
    '2026-06-09',
    '2026-06-09-notes-1',
    '2026-06-10',
    '2026-06-10-notes-1',
    '2026-06-11',
    '2026-06-11-notes-1',
    '2026-06-12',
    '2026-06-12-notes-1',
    '2026-06-13',
    '2026-06-13-notes-1',
    '2026-06-14',
    '2026-06-14-notes-1',
    'week-2026-W25',
    '2026-06-15',
    '2026-06-15-notes-1',
    '2026-06-16',
    '2026-06-16-notes-1',
    '2026-06-17',
    '2026-06-17-notes-1',
    '2026-06-18',
    '2026-06-18-notes-1',
    '2026-06-19',
    '2026-06-19-notes-1',
    '2026-06-20',
    '2026-06-20-notes-1',
    '2026-06-21',
    '2026-06-21-notes-1',
    'week-2026-W26',
    '2026-06-22',
    '2026-06-22-notes-1',
    '2026-06-23',
    '2026-06-23-notes-1',
    '2026-06-24',
    '2026-06-24-notes-1',
    '2026-06-25',
    '2026-06-25-notes-1',
    '2026-06-26',
    '2026-06-26-notes-1',
    '2026-06-27',
    '2026-06-27-notes-1',
    '2026-06-28',
    '2026-06-28-notes-1',
    'week-2026-W27',
    '2026-06-29',
    '2026-06-29-notes-1',
    '2026-06-30',
    '2026-06-30-notes-1',
    '2026-07-01',
    '2026-07-01-notes-1',
    '2026-07-02',
    '2026-07-02-notes-1',
    '2026-07-03',
    '2026-07-03-notes-1',
    '2026-07-04',
    '2026-07-04-notes-1',
    '2026-07-05',
    '2026-07-05-notes-1',
    'week-2026-W28',
    '2026-07-06',
    '2026-07-06-notes-1',
    '2026-07-07',
    '2026-07-07-notes-1',
    '2026-07-08',
    '2026-07-08-notes-1',
    '2026-07-09',
    '2026-07-09-notes-1',
    '2026-07-10',
    '2026-07-10-notes-1',
    '2026-07-11',
    '2026-07-11-notes-1',
    '2026-07-12',
    '2026-07-12-notes-1',
    'week-2026-W29',
    '2026-07-13',
    '2026-07-13-notes-1',
    '2026-07-14',
    '2026-07-14-notes-1',
    '2026-07-15',
    '2026-07-15-notes-1',
    '2026-07-16',
    '2026-07-16-notes-1',
    '2026-07-17',
    '2026-07-17-notes-1',
    '2026-07-18',
    '2026-07-18-notes-1',
    '2026-07-19',
    '2026-07-19-notes-1',
    'week-2026-W30',
    '2026-07-20',
    '2026-07-20-notes-1',
    '2026-07-21',
    '2026-07-21-notes-1',
    '2026-07-22',
    '2026-07-22-notes-1',
    '2026-07-23',
    '2026-07-23-notes-1',
    '2026-07-24',
    '2026-07-24-notes-1',
    '2026-07-25',
    '2026-07-25-notes-1',
    '2026-07-26',
    '2026-07-26-notes-1',
    'week-2026-W31',
    '2026-07-27',
    '2026-07-27-notes-1',
    '2026-07-28',
    '2026-07-28-notes-1',
    '2026-07-29',
    '2026-07-29-notes-1',
    '2026-07-30',
    '2026-07-30-notes-1',
    '2026-07-31',
    '2026-07-31-notes-1',
    '2026-08-01',
    '2026-08-01-notes-1',
    '2026-08-02',
    '2026-08-02-notes-1',
    'week-2026-W32',
    '2026-08-03',
    '2026-08-03-notes-1',
    '2026-08-04',
    '2026-08-04-notes-1',
    '2026-08-05',
    '2026-08-05-notes-1',
    '2026-08-06',
    '2026-08-06-notes-1',
    '2026-08-07',
    '2026-08-07-notes-1',
    '2026-08-08',
    '2026-08-08-notes-1',
    '2026-08-09',
    '2026-08-09-notes-1',
    'week-2026-W33',
    '2026-08-10',
    '2026-08-10-notes-1',
    '2026-08-11',
    '2026-08-11-notes-1',
    '2026-08-12',
    '2026-08-12-notes-1',
    '2026-08-13',
    '2026-08-13-notes-1',
    '2026-08-14',
    '2026-08-14-notes-1',
    '2026-08-15',
    '2026-08-15-notes-1',
    '2026-08-16',
    '2026-08-16-notes-1',
    'week-2026-W34',
    '2026-08-17',
    '2026-08-17-notes-1',
    '2026-08-18',
    '2026-08-18-notes-1',
    '2026-08-19',
    '2026-08-19-notes-1',
    '2026-08-20',
    '2026-08-20-notes-1',
    '2026-08-21',
    '2026-08-21-notes-1',
    '2026-08-22',
    '2026-08-22-notes-1',
    '2026-08-23',
    '2026-08-23-notes-1',
    'week-2026-W35',
    '2026-08-24',
    '2026-08-24-notes-1',
    '2026-08-25',
    '2026-08-25-notes-1',
    '2026-08-26',
    '2026-08-26-notes-1',
    '2026-08-27',
    '2026-08-27-notes-1',
    '2026-08-28',
    '2026-08-28-notes-1',
    '2026-08-29',
    '2026-08-29-notes-1',
    '2026-08-30',
    '2026-08-30-notes-1',
    'week-2026-W36',
    '2026-08-31',
    '2026-08-31-notes-1',
    '2026-09-01',
    '2026-09-01-notes-1',
    '2026-09-02',
    '2026-09-02-notes-1',
    '2026-09-03',
    '2026-09-03-notes-1',
    '2026-09-04',
    '2026-09-04-notes-1',
    '2026-09-05',
    '2026-09-05-notes-1',
    '2026-09-06',
    '2026-09-06-notes-1',
    'week-2026-W37',
    '2026-09-07',
    '2026-09-07-notes-1',
    '2026-09-08',
    '2026-09-08-notes-1',
    '2026-09-09',
    '2026-09-09-notes-1',
    '2026-09-10',
    '2026-09-10-notes-1',
    '2026-09-11',
    '2026-09-11-notes-1',
    '2026-09-12',
    '2026-09-12-notes-1',
    '2026-09-13',
    '2026-09-13-notes-1',
    'week-2026-W38',
    '2026-09-14',
    '2026-09-14-notes-1',
    '2026-09-15',
    '2026-09-15-notes-1',
    '2026-09-16',
    '2026-09-16-notes-1',
    '2026-09-17',
    '2026-09-17-notes-1',
    '2026-09-18',
    '2026-09-18-notes-1',
    '2026-09-19',
    '2026-09-19-notes-1',
    '2026-09-20',
    '2026-09-20-notes-1',
    'week-2026-W39',
    '2026-09-21',
    '2026-09-21-notes-1',
    '2026-09-22',
    '2026-09-22-notes-1',
    '2026-09-23',
    '2026-09-23-notes-1',
    '2026-09-24',
    '2026-09-24-notes-1',
    '2026-09-25',
    '2026-09-25-notes-1',
    '2026-09-26',
    '2026-09-26-notes-1',
    '2026-09-27',
    '2026-09-27-notes-1',
    'week-2026-W40',
    '2026-09-28',
    '2026-09-28-notes-1',
    '2026-09-29',
    '2026-09-29-notes-1',
    '2026-09-30',
    '2026-09-30-notes-1',
    '2026-10-01',
    '2026-10-01-notes-1',
    '2026-10-02',
    '2026-10-02-notes-1',
    '2026-10-03',
    '2026-10-03-notes-1',
    '2026-10-04',
    '2026-10-04-notes-1',
    'week-2026-W41',
    '2026-10-05',
    '2026-10-05-notes-1',
    '2026-10-06',
    '2026-10-06-notes-1',
    '2026-10-07',
    '2026-10-07-notes-1',
    '2026-10-08',
    '2026-10-08-notes-1',
    '2026-10-09',
    '2026-10-09-notes-1',
    '2026-10-10',
    '2026-10-10-notes-1',
    '2026-10-11',
    '2026-10-11-notes-1',
    'week-2026-W42',
    '2026-10-12',
    '2026-10-12-notes-1',
    '2026-10-13',
    '2026-10-13-notes-1',
    '2026-10-14',
    '2026-10-14-notes-1',
    '2026-10-15',
    '2026-10-15-notes-1',
    '2026-10-16',
    '2026-10-16-notes-1',
    '2026-10-17',
    '2026-10-17-notes-1',
    '2026-10-18',
    '2026-10-18-notes-1',
    'week-2026-W43',
    '2026-10-19',
    '2026-10-19-notes-1',
    '2026-10-20',
    '2026-10-20-notes-1',
    '2026-10-21',
    '2026-10-21-notes-1',
    '2026-10-22',
    '2026-10-22-notes-1',
    '2026-10-23',
    '2026-10-23-notes-1',
    '2026-10-24',
    '2026-10-24-notes-1',
    '2026-10-25',
    '2026-10-25-notes-1',
    'week-2026-W44',
    '2026-10-26',
    '2026-10-26-notes-1',
    '2026-10-27',
    '2026-10-27-notes-1',
    '2026-10-28',
    '2026-10-28-notes-1',
    '2026-10-29',
    '2026-10-29-notes-1',
    '2026-10-30',
    '2026-10-30-notes-1',
    '2026-10-31',
    '2026-10-31-notes-1',
    '2026-11-01',
    '2026-11-01-notes-1',
    'week-2026-W45',
    '2026-11-02',
    '2026-11-02-notes-1',
    '2026-11-03',
    '2026-11-03-notes-1',
    '2026-11-04',
    '2026-11-04-notes-1',
    '2026-11-05',
    '2026-11-05-notes-1',
    '2026-11-06',
    '2026-11-06-notes-1',
    '2026-11-07',
    '2026-11-07-notes-1',
    '2026-11-08',
    '2026-11-08-notes-1',
    'week-2026-W46',
    '2026-11-09',
    '2026-11-09-notes-1',
    '2026-11-10',
    '2026-11-10-notes-1',
    '2026-11-11',
    '2026-11-11-notes-1',
    '2026-11-12',
    '2026-11-12-notes-1',
    '2026-11-13',
    '2026-11-13-notes-1',
    '2026-11-14',
    '2026-11-14-notes-1',
    '2026-11-15',
    '2026-11-15-notes-1',
    'week-2026-W47',
    '2026-11-16',
    '2026-11-16-notes-1',
    '2026-11-17',
    '2026-11-17-notes-1',
    '2026-11-18',
    '2026-11-18-notes-1',
    '2026-11-19',
    '2026-11-19-notes-1',
    '2026-11-20',
    '2026-11-20-notes-1',
    '2026-11-21',
    '2026-11-21-notes-1',
    '2026-11-22',
    '2026-11-22-notes-1',
    'week-2026-W48',
    '2026-11-23',
    '2026-11-23-notes-1',
    '2026-11-24',
    '2026-11-24-notes-1',
    '2026-11-25',
    '2026-11-25-notes-1',
    '2026-11-26',
    '2026-11-26-notes-1',
    '2026-11-27',
    '2026-11-27-notes-1',
    '2026-11-28',
    '2026-11-28-notes-1',
    '2026-11-29',
    '2026-11-29-notes-1',
    'week-2026-W49',
    '2026-11-30',
    '2026-11-30-notes-1',
    '2026-12-01',
    '2026-12-01-notes-1',
    '2026-12-02',
    '2026-12-02-notes-1',
    '2026-12-03',
    '2026-12-03-notes-1',
    '2026-12-04',
    '2026-12-04-notes-1',
    '2026-12-05',
    '2026-12-05-notes-1',
    '2026-12-06',
    '2026-12-06-notes-1',
    'week-2026-W50',
    '2026-12-07',
    '2026-12-07-notes-1',
    '2026-12-08',
    '2026-12-08-notes-1',
    '2026-12-09',
    '2026-12-09-notes-1',
    '2026-12-10',
    '2026-12-10-notes-1',
    '2026-12-11',
    '2026-12-11-notes-1',
    '2026-12-12',
    '2026-12-12-notes-1',
    '2026-12-13',
    '2026-12-13-notes-1',
    'week-2026-W51',
    '2026-12-14',
    '2026-12-14-notes-1',
    '2026-12-15',
    '2026-12-15-notes-1',
    '2026-12-16',
    '2026-12-16-notes-1',
    '2026-12-17',
    '2026-12-17-notes-1',
    '2026-12-18',
    '2026-12-18-notes-1',
    '2026-12-19',
    '2026-12-19-notes-1',
    '2026-12-20',
    '2026-12-20-notes-1',
    'week-2026-W52',
    '2026-12-21',
    '2026-12-21-notes-1',
    '2026-12-22',
    '2026-12-22-notes-1',
    '2026-12-23',
    '2026-12-23-notes-1',
    '2026-12-24',
    '2026-12-24-notes-1',
    '2026-12-25',
    '2026-12-25-notes-1',
    '2026-12-26',
    '2026-12-26-notes-1',
    '2026-12-27',
    '2026-12-27-notes-1',
    'week-2026-W53',
    '2026-12-28',
    '2026-12-28-notes-1',
    '2026-12-29',
    '2026-12-29-notes-1',
    '2026-12-30',
    '2026-12-30-notes-1',
    '2026-12-31',
    '2026-12-31-notes-1',
    'review-index-2026',
    'review-2026-W01',
    'review-2026-W02',
    'review-2026-W03',
    'review-2026-W04',
    'review-2026-W05',
    'review-2026-W06',
    'review-2026-W07',
    'review-2026-W08',
    'review-2026-W09',
    'review-2026-W10',
    'review-2026-W11',
    'review-2026-W12',
    'review-2026-W13',
    'review-2026-W14',
    'review-2026-W15',
    'review-2026-W16',
    'review-2026-W17',
    'review-2026-W18',
    'review-2026-W19',
    'review-2026-W20',
    'review-2026-W21',
    'review-2026-W22',
    'review-2026-W23',
    'review-2026-W24',
    'review-2026-W25',
    'review-2026-W26',
    'review-2026-W27',
    'review-2026-W28',
    'review-2026-W29',
    'review-2026-W30',
    'review-2026-W31',
    'review-2026-W32',
    'review-2026-W33',
    'review-2026-W34',
    'review-2026-W35',
    'review-2026-W36',
    'review-2026-W37',
    'review-2026-W38',
    'review-2026-W39',
    'review-2026-W40',
    'review-2026-W41',
    'review-2026-W42',
    'review-2026-W43',
    'review-2026-W44',
    'review-2026-W45',
    'review-2026-W46',
    'review-2026-W47',
    'review-2026-W48',
    'review-2026-W49',
    'review-2026-W50',
    'review-2026-W51',
    'review-2026-W52',
    'review-2026-W53',
    'projects-index-2026-01',
    'projects-2026-01',
    'projects-2026-02',
    'projects-2026-03',
    'projects-2026-04',
    'projects-2026-05',
    'projects-2026-06',
    'projects-2026-07',
    'projects-2026-08',
    'meetings-index-2026',
    'meeting-2026-01',
    'meeting-2026-02',
    'meeting-2026-03',
    'meeting-2026-04',
    'meeting-2026-05',
    'meeting-2026-06',
    'meeting-2026-07',
    'meeting-2026-08',
    'meeting-2026-09',
    'meeting-2026-10',
    'meeting-2026-11',
    'meeting-2026-12',
    'meeting-2026-13',
    'meeting-2026-14',
    'meeting-2026-15',
    'meeting-2026-16',
    'tasks-index-2026-Q1',
    'tasks-2026-W01',
    'tasks-2026-W02',
    'tasks-2026-W03',
    'tasks-2026-W04',
    'tasks-2026-W05',
    'tasks-2026-W06',
    'tasks-2026-W07',
    'tasks-2026-W08',
    'tasks-2026-W09',
    'tasks-2026-W10',
    'tasks-2026-W11',
    'tasks-2026-W12',
    'tasks-2026-W13',
    'tasks-2026-W14',
    'tasks-index-2026-Q2',
    'tasks-2026-W15',
    'tasks-2026-W16',
    'tasks-2026-W17',
    'tasks-2026-W18',
    'tasks-2026-W19',
    'tasks-2026-W20',
    'tasks-2026-W21',
    'tasks-2026-W22',
    'tasks-2026-W23',
    'tasks-2026-W24',
    'tasks-2026-W25',
    'tasks-2026-W26',
    'tasks-2026-W27',
    'tasks-index-2026-Q3',
    'tasks-2026-W28',
    'tasks-2026-W29',
    'tasks-2026-W30',
    'tasks-2026-W31',
    'tasks-2026-W32',
    'tasks-2026-W33',
    'tasks-2026-W34',
    'tasks-2026-W35',
    'tasks-2026-W36',
    'tasks-2026-W37',
    'tasks-2026-W38',
    'tasks-2026-W39',
    'tasks-2026-W40',
    'tasks-index-2026-Q4',
    'tasks-2026-W41',
    'tasks-2026-W42',
    'tasks-2026-W43',
    'tasks-2026-W44',
    'tasks-2026-W45',
    'tasks-2026-W46',
    'tasks-2026-W47',
    'tasks-2026-W48',
    'tasks-2026-W49',
    'tasks-2026-W50',
    'tasks-2026-W51',
    'tasks-2026-W52',
    'tasks-2026-W53',
  ])
# ---
# name: test_notes_pages_zero_skips_wells
  list([
    'cover',
    'year-2026',
    'quarter-2026-Q1',
    'quarter-2026-Q2',
    'quarter-2026-Q3',
    'quarter-2026-Q4',
    'month-2026-01',
    'month-2026-01-habits',
    'month-2026-02',
    'month-2026-02-habits',
    'month-2026-03',
    'month-2026-03-habits',
    'month-2026-04',
    'month-2026-04-habits',
    'month-2026-05',
    'month-2026-05-habits',
    'month-2026-06',
    'month-2026-06-habits',
    'month-2026-07',
    'month-2026-07-habits',
    'month-2026-08',
    'month-2026-08-habits',
    'month-2026-09',
    'month-2026-09-habits',
    'month-2026-10',
    'month-2026-10-habits',
    'month-2026-11',
    'month-2026-11-habits',
    'month-2026-12',
    'month-2026-12-habits',
    'week-2026-W01',
    '2026-01-01',
    '2026-01-02',
    '2026-01-03',
    '2026-01-04',
    'week-2026-W02',
    '2026-01-05',
    '2026-01-06',
    '2026-01-07',
    '2026-01-08',
    '2026-01-09',
    '2026-01-10',
    '2026-01-11',
    'week-2026-W03',
    '2026-01-12',
    '2026-01-13',
    '2026-01-14',
    '2026-01-15',
    '2026-01-16',
    '2026-01-17',
    '2026-01-18',
    'week-2026-W04',
    '2026-01-19',
    '2026-01-20',
    '2026-01-21',
    '2026-01-22',
    '2026-01-23',
    '2026-01-24',
    '2026-01-25',
    'week-2026-W05',
    '2026-01-26',
    '2026-01-27',
    '2026-01-28',
    '2026-01-29',
    '2026-01-30',
    '2026-01-31',
    '2026-02-01',
    'week-2026-W06',
    '2026-02-02',
    '2026-02-03',
    '2026-02-04',
    '2026-02-05',
    '2026-02-06',
    '2026-02-07',
    '2026-02-08',
    'week-2026-W07',
    '2026-02-09',
    '2026-02-10',
    '2026-02-11',
    '2026-02-12',
    '2026-02-13',
    '2026-02-14',
    '2026-02-15',
    'week-2026-W08',
    '2026-02-16',
    '2026-02-17',
    '2026-02-18',
    '2026-02-19',
    '2026-02-20',
    '2026-02-21',
    '2026-02-22',
    'week-2026-W09',
    '2026-02-23',
    '2026-02-24',
    '2026-02-25',
    '2026-02-26',
    '2026-02-27',
    '2026-02-28',
    '2026-03-01',
    'week-2026-W10',
    '2026-03-02',
    '2026-03-03',
    '2026-03-04',
    '2026-03-05',
    '2026-03-06',
    '2026-03-07',
    '2026-03-08',
    'week-2026-W11',
    '2026-03-09',
    '2026-03-10',
    '2026-03-11',
    '2026-03-12',
    '2026-03-13',
    '2026-03-14',
    '2026-03-15',
    'week-2026-W12',
    '2026-03-16',
    '2026-03-17',
    '2026-03-18',
    '2026-03-19',
    '2026-03-20',
    '2026-03-21',
    '2026-03-22',
    'week-2026-W13',
    '2026-03-23',
    '2026-03-24',
    '2026-03-25',
    '2026-03-26',
    '2026-03-27',
    '2026-03-28',
    '2026-03-29',
    'week-2026-W14',
    '2026-03-30',
    '2026-03-31',
    '2026-04-01',
    '2026-04-02',
    '2026-04-03',
    '2026-04-04',
    '2026-04-05',
    'week-2026-W15',
    '2026-04-06',
    '2026-04-07',
    '2026-04-08',
    '2026-04-09',
    '2026-04-10',
    '2026-04-11',
    '2026-04-12',
    'week-2026-W16',
    '2026-04-13',
    '2026-04-14',
    '2026-04-15',
    '2026-04-16',
    '2026-04-17',
    '2026-04-18',
    '2026-04-19',
    'week-2026-W17',
    '2026-04-20',
    '2026-04-21',
    '2026-04-22',
    '2026-04-23',
    '2026-04-24',
    '2026-04-25',
    '2026-04-26',
    'week-2026-W18',
    '2026-04-27',
    '2026-04-28',
    '2026-04-29',
    '2026-04-30',
    '2026-05-01',
    '2026-05-02',
    '2026-05-03',
    'week-2026-W19',
    '2026-05-04',
    '2026-05-05',
    '2026-05-06',
    '2026-05-07',
    '2026-05-08',
    '2026-05-09',
    '2026-05-10',
    'week-2026-W20',
    '2026-05-11',
    '2026-05-12',
    '2026-05-13',
    '2026-05-14',
    '2026-05-15',
    '2026-05-16',
    '2026-05-17',
    'week-2026-W21',
    '2026-05-18',
    '2026-05-19',
    '2026-05-20',
    '2026-05-21',
    '2026-05-22',
    '2026-05-23',
    '2026-05-24',
    'week-2026-W22',
    '2026-05-25',
    '2026-05-26',
    '2026-05-27',
    '2026-05-28',
    '2026-05-29',
    '2026-05-30',
    '2026-05-31',
    'week-2026-W23',
    '2026-06-01',
    '2026-06-02',
    '2026-06-03',
    '2026-06-04',
    '2026-06-05',
    '2026-06-06',
    '2026-06-07',
    'week-2026-W24',
    '2026-06-08',
    '2026-06-09',
    '2026-06-10',
    '2026-06-11',
    '2026-06-12',
    '2026-06-13',
    '2026-06-14',
    'week-2026-W25',
    '2026-06-15',
    '2026-06-16',
    '2026-06-17',
    '2026-06-18',
    '2026-06-19',
    '2026-06-20',
    '2026-06-21',
    'week-2026-W26',
    '2026-06-22',
    '2026-06-23',
    '2026-06-24',
    '2026-06-25',
    '2026-06-26',
    '2026-06-27',
    '2026-06-28',
    'week-2026-W27',
    '2026-06-29',
    '2026-06-30',
    '2026-07-01',
    '2026-07-02',
    '2026-07-03',
    '2026-07-04',
    '2026-07-05',
    'week-2026-W28',
    '2026-07-06',
    '2026-07-07',
    '2026-07-08',
    '2026-07-09',
    '2026-07-10',
    '2026-07-11',
    '2026-07-12',
    'week-2026-W29',
    '2026-07-13',
    '2026-07-14',
    '2026-07-15',
    '2026-07-16',
    '2026-07-17',
    '2026-07-18',
    '2026-07-19',
    'week-2026-W30',
    '2026-07-20',
    '2026-07-21',
    '2026-07-22',
    '2026-07-23',
    '2026-07-24',
    '2026-07-25',
    '2026-07-26',
    'week-2026-W31',
    '2026-07-27',
    '2026-07-28',
    '2026-07-29',
    '2026-07-30',
    '2026-07-31',
    '2026-08-01',
    '2026-08-02',
    'week-2026-W32',
    '2026-08-03',
    '2026-08-04',
    '2026-08-05',
    '2026-08-06',
    '2026-08-07',
    '2026-08-08',
    '2026-08-09',
    'week-2026-W33',
    '2026-08-10',
    '2026-08-11',
    '2026-08-12',
    '2026-08-13',
    '2026-08-14',
    '2026-08-15',
    '2026-08-16',
    'week-2026-W34',
    '2026-08-17',
    '2026-08-18',
    '2026-08-19',
    '2026-08-20',
    '2026-08-21',
    '2026-08-22',
    '2026-08-23',
    'week-2026-W35',
    '2026-08-24',
    '2026-08-25',
    '2026-08-26',
    '2026-08-27',
    '2026-08-28',
    '2026-08-29',
    '2026-08-30',
    'week-2026-W36',
    '2026-08-31',
    '2026-09-01',
    '2026-09-02',
    '2026-09-03',
    '2026-09-04',
    '2026-09-05',
    '2026-09-06',
    'week-2026-W37',
    '2026-09-07',
    '2026-09-08',
    '2026-09-09',
    '2026-09-10',
    '2026-09-11',
    '2026-09-12',
    '2026-09-13',
    'week-2026-W38',
    '2026-09-14',
    '2026-09-15',
    '2026-09-16',
    '2026-09-17',
    '2026-09-18',
    '2026-09-19',
    '2026-09-20',
    'week-2026-W39',
    '2026-09-21',
    '2026-09-22',
    '2026-09-23',
    '2026-09-24',
    '2026-09-25',
    '2026-09-26',
    '2026-09-27',
    'week-2026-W40',
    '2026-09-28',
    '2026-09-29',
    '2026-09-30',
    '2026-10-01',
    '2026-10-02',
    '2026-10-03',
    '2026-10-04',
    'week-2026-W41',
    '2026-10-05',
    '2026-10-06',
    '2026-10-07',
    '2026-10-08',
    '2026-10-09',
    '2026-10-10',
    '2026-10-11',
    'week-2026-W42',
    '2026-10-12',
    '2026-10-13',
    '2026-10-14',
    '2026-10-15',
    '2026-10-16',
    '2026-10-17',
    '2026-10-18',
    'week-2026-W43',
    '2026-10-19',
    '2026-10-20',
    '2026-10-21',
    '2026-10-22',
    '2026-10-23',
    '2026-10-24',
    '2026-10-25',
    'week-2026-W44',
    '2026-10-26',
    '2026-10-27',
    '2026-10-28',
    '2026-10-29',
    '2026-10-30',
    '2026-10-31',
    '2026-11-01',
    'week-2026-W45',
    '2026-11-02',
    '2026-11-03',
    '2026-11-04',
    '2026-11-05',
    '2026-11-06',
    '2026-11-07',
    '2026-11-08',
    'week-2026-W46',
    '2026-11-09',
    '2026-11-10',
    '2026-11-11',
    '2026-11-12',
    '2026-11-13',
    '2026-11-14',
    '2026-11-15',
    'week-2026-W47',
    '2026-11-16',
    '2026-11-17',
    '2026-11-18',
    '2026-11-19',
    '2026-11-20',
    '2026-11-21',
    '2026-11-22',
    'week-2026-W48',
    '2026-11-23',
    '2026-11-24',
    '2026-11-25',
    '2026-11-26',
    '2026-11-27',
    '2026-11-28',
    '2026-11-29',
    'week-2026-W49',
    '2026-11-30',
    '2026-12-01',
    '2026-12-02',
    '2026-12-03',
    '2026-12-04',
    '2026-12-05',
    '2026-12-06',
    'week-2026-W50',
    '2026-12-07',
    '2026-12-08',
    '2026-12-09',
    '2026-12-10',
    '2026-12-11',
    '2026-12-12',
    '2026-12-13',
    'week-2026-W51',
    '2026-12-14',
    '2026-12-15',
    '2026-12-16',
    '2026-12-17',
    '2026-12-18',
    '2026-12-19',
    '2026-12-20',
    'week-2026-W52',
    '2026-12-21',
    '2026-12-22',
    '2026-12-23',
    '2026-12-24',
    '2026-12-25',
    '2026-12-26',
    '2026-12-27',
    'week-2026-W53',
    '2026-12-28',
    '2026-12-29',
    '2026-12-30',
    '2026-12-31',
    'review-index-2026',
    'review-2026-W01',
    'review-2026-W02',
    'review-2026-W03',
    'review-2026-W04',
    'review-2026-W05',
    'review-2026-W06',
    'review-2026-W07',
    'review-2026-W08',
    'review-2026-W09',
    'review-2026-W10',
    'review-2026-W11',
    'review-2026-W12',
    'review-2026-W13',
    'review-2026-W14',
    'review-2026-W15',
    'review-2026-W16',
    'review-2026-W17',
    'review-2026-W18',
    'review-2026-W19',
    'review-2026-W20',
    'review-2026-W21',
    'review-2026-W22',
    'review-2026-W23',
    'review-2026-W24',
    'review-2026-W25',
    'review-2026-W26',
    'review-2026-W27',
    'review-2026-W28',
    'review-2026-W29',
    'review-2026-W30',
    'review-2026-W31',
    'review-2026-W32',
    'review-2026-W33',
    'review-2026-W34',
    'review-2026-W35',
    'review-2026-W36',
    'review-2026-W37',
    'review-2026-W38',
    'review-2026-W39',
    'review-2026-W40',
    'review-2026-W41',
    'review-2026-W42',
    'review-2026-W43',
    'review-2026-W44',
    'review-2026-W45',
    'review-2026-W46',
    'review-2026-W47',
    'review-2026-W48',
    'review-2026-W49',
    'review-2026-W50',
    'review-2026-W51',
    'review-2026-W52',
    'review-2026-W53',
    'projects-index-2026-01',
    'projects-2026-01',
    'projects-2026-02',
    'projects-2026-03',
    'projects-2026-04',
    'projects-2026-05',
    'projects-2026-06',
    'projects-2026-07',
    'projects-2026-08',
    'meetings-index-2026',
    'meeting-2026-01',
    'meeting-2026-02',
    'meeting-2026-03',
    'meeting-2026-04',
    'meeting-2026-05',
    'meeting-2026-06',
    'meeting-2026-07',
    'meeting-2026-08',
    'meeting-2026-09',
    'meeting-2026-10',
    'meeting-2026-11',
    'meeting-2026-12',
    'meeting-2026-13',
    'meeting-2026-14',
    'meeting-2026-15',
    'meeting-2026-16',
    'tasks-index-2026-Q1',
    'tasks-2026-W01',
    'tasks-2026-W02',
    'tasks-2026-W03',
    'tasks-2026-W04',
    'tasks-2026-W05',
    'tasks-2026-W06',
    'tasks-2026-W07',
    'tasks-2026-W08',
    'tasks-2026-W09',
    'tasks-2026-W10',
    'tasks-2026-W11',
    'tasks-2026-W12',
    'tasks-2026-W13',
    'tasks-2026-W14',
    'tasks-index-2026-Q2',
    'tasks-2026-W15',
    'tasks-2026-W16',
    'tasks-2026-W17',
    'tasks-2026-W18',
    'tasks-2026-W19',
    'tasks-2026-W20',
    'tasks-2026-W21',
    'tasks-2026-W22',
    'tasks-2026-W23',
    'tasks-2026-W24',
    'tasks-2026-W25',
    'tasks-2026-W26',
    'tasks-2026-W27',
    'tasks-index-2026-Q3',
    'tasks-2026-W28',
    'tasks-2026-W29',
    'tasks-2026-W30',
    'tasks-2026-W31',
    'tasks-2026-W32',
    'tasks-2026-W33',
    'tasks-2026-W34',
    'tasks-2026-W35',
    'tasks-2026-W36',
    'tasks-2026-W37',
    'tasks-2026-W38',
    'tasks-2026-W39',
    'tasks-2026-W40',
    'tasks-index-2026-Q4',
    'tasks-2026-W41',
    'tasks-2026-W42',
    'tasks-2026-W43',
    'tasks-2026-W44',
    'tasks-2026-W45',
    'tasks-2026-W46',
    'tasks-2026-W47',
    'tasks-2026-W48',
    'tasks-2026-W49',
    'tasks-2026-W50',
    'tasks-2026-W51',
    'tasks-2026-W52',
    'tasks-2026-W53',
  ])
# ---
